Preliminary name pyplume

--- a/access_thredds_hycom.ipynb
+++ b/access_thredds_hycom.ipynb
@@ -51,8 +51,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "import src.utils as utils\n",
-    "from src.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset"
+    "import pyplume.utils as utils\n",
+    "from pyplume.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset"
    ]
   },
   {
