--- a/compare_cfgs.ipynb
+++ b/compare_cfgs.ipynb
@@ -2,27 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (plot_utils.py, line 177)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/Users/jerry/miniconda3/envs/py3-parcels/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[1;32m\"/var/folders/mb/hd5ymr3137g2g0chv_x_tvb40000gq/T/ipykernel_96649/1004463892.py\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    import src.runner as runner\n",
-      "  File \u001b[1;32m\"/Users/jerry/Documents/ucsd-stuff/scripps-cordc/parcels-westcoast/src/runner.py\"\u001b[0m, line \u001b[1;32m13\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from src.parcels_sim import ParcelsSimulation\n",
-      "  File \u001b[1;32m\"/Users/jerry/Documents/ucsd-stuff/scripps-cordc/parcels-westcoast/src/parcels_sim.py\"\u001b[0m, line \u001b[1;32m13\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from src.parcels_analysis import ParticleResult\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/jerry/Documents/ucsd-stuff/scripps-cordc/parcels-westcoast/src/parcels_analysis.py\"\u001b[0;36m, line \u001b[0;32m17\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import src.plot_utils as plot_utils\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/jerry/Documents/ucsd-stuff/scripps-cordc/parcels-westcoast/src/plot_utils.py\"\u001b[0;36m, line \u001b[0;32m177\u001b[0m\n\u001b[0;31m    def plot_particles(\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import src.runner as runner\n",
-    "import src.utils as utils"
+    "import pyplume.runner as runner\n",
+    "import pyplume.utils as utils"
    ]
   },
   {
