--- a/gapfill_example.ipynb
+++ b/gapfill_example.ipynb
@@ -36,10 +36,10 @@
     }
    ],
    "source": [
-    "import src.utils as utils\n",
-    "from src.parcels_utils import SurfaceGrid, read_netcdf_info\n",
-    "from src.parcels_sim import ParcelsSimulation\n",
-    "from src.gapfilling import Gapfiller\n",
+    "import pyplume.utils as utils\n",
+    "from pyplume.parcels_utils import SurfaceGrid, read_netcdf_info\n",
+    "from pyplume.parcels_sim import ParcelsSimulation\n",
+    "from pyplume.gapfilling import Gapfiller\n",
     "\n",
     "empty = (None, {}, \"\", [])"
    ]
@@ -138,10 +138,10 @@
       "http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\n",
       "total invalid values on target data: 63477\n",
       "Attempting to interpolate 63477 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7feff8254450>: 32844\n",
+      "total invalid values after interpolation with <pyplume.parcels_utils.SurfaceGrid object at 0x7feff8254450>: 32844\n",
       "    values filled: 30633\n",
       "Attempting to interpolate 32844 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7feff83cf0d0>: 5482\n",
+      "total invalid values after interpolation with <pyplume.parcels_utils.SurfaceGrid object at 0x7feff83cf0d0>: 5482\n",
       "    values filled: 27362\n",
       "total invalid values on interpolated: 5482\n",
       "Detected latitude key as yf\n",
@@ -195,10 +195,10 @@
       "Retrieving thredds dataset...\n",
       "total invalid values on target data: 63477\n",
       "Attempting to interpolate 63477 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7ff01b7a5690>: 32844\n",
+      "total invalid values after interpolation with <pyplume.parcels_utils.SurfaceGrid object at 0x7ff01b7a5690>: 32844\n",
       "    values filled: 30633\n",
       "Attempting to interpolate 32844 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7ff01b6a0950>: 5482\n",
+      "total invalid values after interpolation with <pyplume.parcels_utils.SurfaceGrid object at 0x7ff01b6a0950>: 5482\n",
       "    values filled: 27362\n",
       "total invalid values on interpolated: 5482\n",
       "Filling 121 fields...\n",
