--- a/plume_mat_particle_loader.ipynb
+++ b/plume_mat_particle_loader.ipynb
@@ -34,8 +34,8 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
-    "import src.utils as utils\n",
-    "from src.parcels_utils import arrays_to_particlefilenc"
+    "import pyplume.utils as utils\n",
+    "from pyplume.parcels_utils import arrays_to_particlefilenc"
    ]
   },
   {
