--- a/run_mwbGS.ipynb
+++ b/run_mwbGS.ipynb
@@ -38,12 +38,12 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid, read_netcdf_info\n",
-    "from src.constants import *\n",
+    "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid, read_netcdf_info\n",
+    "from pyplume.constants import *\n",
     "\n",
-    "from src.parcels_sim import ParcelsSimulation\n",
-    "from src.parcels_analysis import *\n",
-    "import src.utils as utils"
+    "from pyplume.parcels_sim import ParcelsSimulation\n",
+    "from pyplume.parcels_analysis import *\n",
+    "import pyplume.utils as utils"
    ]
   },
   {
