--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -31,9 +31,9 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "import src.utils as utils\n",
-    "from src.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset"
+    "import pyplume.utils as utils\n",
+    "from pyplume.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset\n",
+    "from pyplume.parcels_utils import xr_dataset_to_fieldset"
    ]
   },
   {
