--- a/coord_to_mat.ipynb
+++ b/coord_to_mat.ipynb
@@ -21,8 +21,8 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
-    "import src.utils as utils\n",
-    "from src.parcels_utils import get_file_info"
+    "import pyplume.utils as utils\n",
+    "from pyplume.parcels_utils import get_file_info"
    ]
   },
   {
