--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -16,9 +16,9 @@
     "from shapely.geometry import LineString, Point, box\n",
     "from shapely.ops import nearest_points\n",
     "\n",
-    "import src.utils as utils\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid\n",
-    "from src.thredds_utils import rename_dataset_vars"
+    "import pyplume.utils as utils\n",
+    "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid\n",
+    "from pyplume.thredds_utils import rename_dataset_vars"
    ]
   },
   {
@@ -264,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "from src.plot_utils import get_carree_axis, get_carree_gl\n",
+    "from pyplume.plot_utils import get_carree_axis, get_carree_gl\n",
     "\n",
     "othermgrid = np.meshgrid(lats_grid, lons_grid, indexing=\"ij\")\n",
     "plt.figure(figsize=(20, 20))\n",
@@ -306,7 +306,7 @@
    "source": [
     "from parcels import Field, VectorField\n",
     "from parcels.tools.converters import GeographicPolar, Geographic\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset\n",
+    "from pyplume.parcels_utils import xr_dataset_to_fieldset\n",
     "\n",
     "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
     "fu.units = GeographicPolar()\n",
