--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -31,8 +31,8 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
-    "import src.utils as utils\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset"
+    "import pyplume.utils as utils\n",
+    "from pyplume.parcels_utils import xr_dataset_to_fieldset"
    ]
   },
   {
