Rename several files

--- a/gapfill_example.ipynb
+++ b/gapfill_example.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "import pyplume.utils as utils\n",
     "from pyplume.parcels_utils import SurfaceGrid, read_netcdf_info\n",
-    "from pyplume.parcels_sim import ParcelsSimulation\n",
+    "from pyplume.simulation import ParcelsSimulation\n",
     "from pyplume.gapfilling import Gapfiller\n",
     "\n",
     "empty = (None, {}, \"\", [])"
