--- a/run_mwbGS.ipynb
+++ b/run_mwbGS.ipynb
@@ -41,8 +41,8 @@
     "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid, read_netcdf_info\n",
     "from pyplume.constants import *\n",
     "\n",
-    "from pyplume.parcels_sim import ParcelsSimulation\n",
-    "from pyplume.parcels_analysis import *\n",
+    "from pyplume.simulation import ParcelsSimulation\n",
+    "from pyplume.postprocess import *\n",
     "import pyplume.utils as utils"
    ]
   },
