Massive data loading refactor, make important notebooks function with it

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -31,8 +31,10 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
+    "from pyplume.constants import FIELD_NETCDF_DIR\n",
+    "from pyplume.dataloaders import slice_dataset\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset\n",
+    "from pyplume.thredds_data import retrieve_dataset\n",
     "from pyplume.parcels_utils import xr_dataset_to_fieldset"
    ]
   },
@@ -62,14 +64,14 @@
     "    for m in months:\n",
     "        days = np.arange(m, m + np.timedelta64(1, \"M\"), dtype=\"datetime64[D]\")\n",
     "        timerng = (np.datetime64(days[0], \"h\"), days[-1] + np.timedelta64(23, \"h\"))\n",
-    "        for code in (ThreddsCode.USWC_1KM_HOURLY, ThreddsCode.USWC_2KM_HOURLY, ThreddsCode.USWC_6KM_HOURLY):\n",
+    "        for code in (\"USWC_1KM_HOURLY\", \"USWC_2KM_HOURLY\", \"USWC_6KM_HOURLY\"):\n",
     "            regions.append({\n",
     "                \"name\": f\"{name}_{m}\",\n",
     "                \"code\": code,\n",
     "                \"time_range\": timerng,\n",
     "                \"lat_range\": lat_rng,\n",
     "                \"lon_range\": lon_rng,\n",
-    "                \"include_range_endpoints\": False if code == ThreddsCode.USWC_1KM_HOURLY else True\n",
+    "                \"include_range_endpoints\": False if code == \"USWC_1KM_HOURLY\" else True\n",
     "            })\n",
     "    return regions"
    ]
@@ -109,51 +111,55 @@
     "# tuple reference\n",
     "# (name, region code, time range, lat range, lon range, include domain endpoints)\n",
     "region_data = [\n",
-    "#     {\n",
-    "#         \"name\": \"tj_sample\",\n",
-    "#         \"code\": ThreddsCode.USWC_1KM_HOURLY,\n",
-    "#         \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
-    "#         \"lat_range\": (32.11093, 32.73124),\n",
-    "#         \"lon_range\": (-117.565, -116.9924),\n",
-    "#         \"include_range_endpoints\": False\n",
-    "#     },\n",
-    "    # {\n",
-    "    #     \"name\": \"hunington_latest\",\n",
-    "    #     \"code\": ThreddsCode.USWC_6KM_HOURLY,\n",
-    "    #     \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
-    "    #     \"lat_range\": (32, 34.2),\n",
-    "    #     \"lon_range\": (-119, -117.4),\n",
-    "    #     \"include_range_endpoints\": True\n",
-    "    # },\n",
+    "    {\n",
+    "        \"name\": \"tj_sample\",\n",
+    "        \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "        \"code\": \"USWC_1KM_HOURLY\",\n",
+    "        \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
+    "        \"lat_range\": (32.11093, 32.73124),\n",
+    "        \"lon_range\": (-117.565, -116.9924),\n",
+    "        \"include_range_endpoints\": False\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"hunington_latest\",\n",
+    "        \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "        \"code\": \"USWC_6KM_HOURLY\",\n",
+    "        \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
+    "        \"lat_range\": (32, 34.2),\n",
+    "        \"lon_range\": (-119, -117.4),\n",
+    "        \"include_range_endpoints\": True\n",
+    "    },\n",
     "    {\n",
     "        \"name\": \"tj_plume_1km_2020-03\",\n",
-    "        \"code\": ThreddsCode.USWC_1KM_HOURLY,\n",
+    "        \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "        \"code\": \"USWC_1KM_HOURLY\",\n",
     "        \"time_range\": (\"2020-03-09T01:00\", \"2020-03-14T01:00\"),\n",
     "        \"lat_range\": (32.11093, 32.73124),\n",
     "        \"lon_range\": (-117.565, -116.9924),\n",
     "        \"include_range_endpoints\": True,\n",
     "        \"generate_mask\": True\n",
     "    },\n",
-    "    # {\n",
-    "    #   \"name\": \"hycom_mwbproj\",\n",
-    "    #   \"code\": ThreddsCode.DATA_HYCOMFORE,\n",
-    "    #   \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
-    "    #   \"lat_range\": (22, 45),\n",
-    "    #   \"lon_range\": (273, 295),\n",
-    "    #   \"include_range_endpoints\": False\n",
-    "    # },\n",
+    "    {\n",
+    "      \"name\": \"hycom_mwbproj\",\n",
+    "      \"datasrc\": \"THREDDS_HYCOM\",\n",
+    "      \"code\": \"FMRC_HYCOM\",\n",
+    "      \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
+    "      \"lat_range\": (22, 45),\n",
+    "      \"lon_range\": (273, 295),\n",
+    "      \"include_range_endpoints\": False\n",
+    "    },\n",
     "    # stuff below here hasn't been updated with the new format\n",
-    "#     (\"tj_plume\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "#     (\"tj_plume\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tj_plume\", ThreddsCode.USWC_6KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tijuana_river\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river\", ThreddsCode.USWC_6KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "#     (\"tijuana_river_small\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
-    "#     (\"tijuana_river_now\", ThreddsCode.USWC_1KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river_now\", ThreddsCode.USWC_2KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river_now\", ThreddsCode.USWC_6KM_HOURLY, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "#     (\"missing_buoy\", ThreddsCode.USWC_6KM_HOURLY, (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
+    "#     (\"tj_plume\", \"USWC_1KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_plume\", \"USWC_2KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tj_plume\", \"USWC_6KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tijuana_river\", \"USWC_1KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river\", \"USWC_2KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river\", \"USWC_6KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"tijuana_river_small\", \"USWC_1KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
+    "#     (\"tijuana_river_now\", \"USWC_1KM_HOURLY\", get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river_now\", \"USWC_2KM_HOURLY\", get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river_now\", \"USWC_6KM_HOURLY\", (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"missing_buoy\", \"USWC_6KM_HOURLY\", (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
     "]\n",
     "\n",
     "\n",
@@ -171,8 +177,9 @@
    "source": [
     "regions = []\n",
     "for rd in region_data:\n",
+    "    full = retrieve_dataset(rd[\"datasrc\"], rd[\"code\"])\n",
     "    dataset = slice_dataset(\n",
-    "        rd[\"code\"], rd[\"time_range\"], rd[\"lat_range\"],\n",
+    "        full, rd[\"time_range\"], rd[\"lat_range\"],\n",
     "        rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
     "    )\n",
     "    new_reg = {\"name\": rd[\"name\"], \"dataset\": dataset}\n",
@@ -180,12 +187,11 @@
     "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")\n",
     "    if rd.get(\"generate_mask\", False):\n",
     "        # automatically generate a mask\n",
-    "        full = retrieve_dataset(rd[\"code\"])\n",
     "        hours = (full[\"time\"].max() - full[\"time\"].min()) / np.timedelta64(1, \"h\")\n",
     "        # 50 equal timesteps, should be a good enough sample to show coverage right?\n",
     "        step = int(hours / 50)\n",
     "        mask = slice_dataset(\n",
-    "            rd[\"code\"], time_range=(full[\"time\"].min().values, full[\"time\"].max().values, step),\n",
+    "            full, time_range=(full[\"time\"].min().values, full[\"time\"].max().values, step),\n",
     "            lat_range=rd[\"lat_range\"], lon_range=rd[\"lon_range\"],\n",
     "            inclusive=rd[\"include_range_endpoints\"]\n",
     "        )\n",
@@ -201,7 +207,7 @@
    "outputs": [],
    "source": [
     "for i, r in enumerate(regions):\n",
-    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR)\n",
+    "    save_dir = utils.create_path(FIELD_NETCDF_DIR)\n",
     "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
