--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "import pyplume.utils as utils\n",
     "from pyplume.parcels_utils import get_file_info\n",
-    "from pyplume.plot_utils import get_carree_axis, get_carree_gl"
+    "from pyplume.plotting import get_carree_axis, get_carree_gl"
    ]
   },
   {
