--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "import pyplume.utils as utils\n",
     "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid\n",
-    "from pyplume.thredds_utils import rename_dataset_vars"
+    "from pyplume.thredds_data import rename_dataset_vars"
    ]
   },
   {
@@ -30,10 +30,10 @@
    "source": [
     "# velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
     "# coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
-    "# output_file = \"current_netcdfs/socal_alongshore.nc\"\n",
+    "# output_file = \"data/field_netcdfs/socal_alongshore.nc\"\n",
     "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"tj_plume_1km_2020-03.nc\"\n",
     "coastline_mat = utils.MATLAB_DIR / \"coastline.mat\"\n",
-    "output_file = \"current_netcdfs/tijuana_alongshore.nc\"\n",
+    "output_file = \"data/field_netcdfs/tijuana_alongshore.nc\"\n",
     "# 1 km resolution values\n",
     "lat_diff = 0.00898933\n",
     "lon_diff = 0.01042175"
@@ -264,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyplume.plot_utils import get_carree_axis, get_carree_gl\n",
+    "from pyplume.plotting import get_carree_axis, get_carree_gl\n",
     "\n",
     "othermgrid = np.meshgrid(lats_grid, lons_grid, indexing=\"ij\")\n",
     "plt.figure(figsize=(20, 20))\n",
