--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -26,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyplume.constants import CONFIGS_DIR\n",
     "import pyplume.utils as utils\n",
     "import pyplume.runner as runner"
    ]
@@ -49,7 +50,7 @@
     "    \"plume_track.json\",\n",
     "    \"plume_track_alongshore.json\",\n",
     "    # \"plume_track_live.json\",\n",
-    "    # \"mwb.json\",\n",
+    "    \"mwb.json\",\n",
     "    # \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
     "#     \"hunington_all.json\",\n",
@@ -65,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
+    "loaded_configs = [utils.load_config(CONFIGS_DIR / path) for path in configs]\n",
     "sims = []\n",
     "for cfg in loaded_configs:\n",
     "    sims.append(runner.prep_sim_from_cfg(cfg))"
