Improve simulation result file structure

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "for i, r in enumerate(regions):\n",
-    "    save_dir = utils.create_path(FIELD_NETCDF_DIR)\n",
+    "    save_dir = utils.get_dir(FIELD_NETCDF_DIR)\n",
     "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
