--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "lon, lat = np.meshgrid(files[0][\"xrds\"][\"lon\"].values, files[0][\"xrds\"][\"lat\"].values)\n",
     "first_time = np.datetime64(files[0][\"timerng\"][0], \"M\")\n",
-    "deg_diff_dir = utils.create_path(utils.PICUTRE_DIR / \"fs_comp_angle\")\n",
+    "deg_diff_dir = utils.get_dir(utils.PICUTRE_DIR / \"fs_comp_angle\")\n",
     "\n",
     "dom = files[0][\"domain\"]\n",
     "dom[\"S\"] = 32.3\n",
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deg_diff_dir = utils.create_path(utils.PICUTRE_DIR / \"fs_comp_mag\")\n",
+    "deg_diff_dir = utils.get_dir(utils.PICUTRE_DIR / \"fs_comp_mag\")\n",
     "\n",
     "ax = get_carree_axis(dom)\n",
     "gl = get_carree_gl(ax)\n",
