Move parcels_utils stuff to dataloaders, make classes not depend on json config

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -32,10 +32,9 @@
     "import xarray as xr\n",
     "\n",
     "from pyplume.constants import FIELD_NETCDF_DIR\n",
-    "from pyplume.dataloaders import slice_dataset\n",
+    "from pyplume.dataloaders import slice_dataset, dataset_to_fieldset\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.thredds_data import retrieve_dataset\n",
-    "from pyplume.parcels_utils import xr_dataset_to_fieldset"
+    "from pyplume.thredds_data import retrieve_dataset"
    ]
   },
   {
