--- a/coord_to_mat.ipynb
+++ b/coord_to_mat.ipynb
@@ -22,7 +22,7 @@
     "import xarray as xr\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import get_file_info"
+    "from pyplume.dataloaders import get_file_info"
    ]
   },
   {
@@ -32,8 +32,8 @@
    "outputs": [],
    "source": [
     "file = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\")\n",
-    "lats = file[\"xrds\"][\"lat\"].values\n",
-    "lons = file[\"xrds\"][\"lon\"].values"
+    "lats = file[\"ds\"][\"lat\"].values\n",
+    "lons = file[\"ds\"][\"lon\"].values"
    ]
   },
   {
