--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -40,7 +40,7 @@
     "import scipy.spatial\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import get_file_info\n",
+    "from pyplume.dataloaders import get_file_info\n",
     "from pyplume.plotting import get_carree_axis, get_carree_gl"
    ]
   },
@@ -101,30 +101,30 @@
    "outputs": [],
    "source": [
     "# kind of hardcoded\n",
-    "ang_diff = np.full(files[0][\"xrds\"][\"u\"].shape, np.nan, dtype=np.float32)\n",
+    "ang_diff = np.full(files[0][\"ds\"][\"u\"].shape, np.nan, dtype=np.float32)\n",
     "mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
     "\n",
     "if not dimensions_same:\n",
     "    for t, i, j in np.ndindex(ang_diff.shape):\n",
-    "        time = files[0][\"xrds\"][\"time\"].values[t]\n",
-    "        u = files[0][\"xrds\"][\"u\"].values[t, i, j]\n",
-    "        if np.isnan(u) or time not in files[1][\"xrds\"][\"time\"]:\n",
+    "        time = files[0][\"ds\"][\"time\"].values[t]\n",
+    "        u = files[0][\"ds\"][\"u\"].values[t, i, j]\n",
+    "        if np.isnan(u) or time not in files[1][\"ds\"][\"time\"]:\n",
     "            continue\n",
     "        # OI data is missing some time values\n",
-    "        t_other = np.where(files[1][\"xrds\"][\"time\"].values == time)[0]\n",
+    "        t_other = np.where(files[1][\"ds\"][\"time\"].values == time)[0]\n",
     "        if t_other.size == 0:\n",
     "            continue\n",
     "        else:\n",
     "            t_other = t_other[0]\n",
-    "        lat = files[0][\"xrds\"][\"lat\"][i].values\n",
-    "        lon = files[0][\"xrds\"][\"lon\"][j].values\n",
+    "        lat = files[0][\"ds\"][\"lat\"][i].values\n",
+    "        lon = files[0][\"ds\"][\"lon\"][j].values\n",
     "        lat_ind, lon_ind = get_nearest_index(files[1], lat, lon)\n",
-    "    #     print(utils.haversine(lat, files[1][\"xrds\"][\"lat\"].values[lat_ind], lon, files[1][\"xrds\"][\"lon\"].values[lon_ind]))\n",
-    "        if abs(lat - files[1][\"xrds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"xrds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
+    "    #     print(utils.haversine(lat, files[1][\"ds\"][\"lat\"].values[lat_ind], lon, files[1][\"ds\"][\"lon\"].values[lon_ind]))\n",
+    "        if abs(lat - files[1][\"ds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"ds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
     "            continue\n",
-    "        v = files[0][\"xrds\"][\"v\"].values[t, i, j]\n",
-    "        u_other = files[1][\"xrds\"][\"u\"].values[t_other, lat_ind, lon_ind]\n",
-    "        v_other = files[1][\"xrds\"][\"v\"].values[t_other, lat_ind, lon_ind]\n",
+    "        v = files[0][\"ds\"][\"v\"].values[t, i, j]\n",
+    "        u_other = files[1][\"ds\"][\"u\"].values[t_other, lat_ind, lon_ind]\n",
+    "        v_other = files[1][\"ds\"][\"v\"].values[t_other, lat_ind, lon_ind]\n",
     "        mag = np.sqrt(u * u + v * v)\n",
     "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
     "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
@@ -140,17 +140,17 @@
     "else:\n",
     "    # runs mUCH MUCH quicker\n",
     "    for t in range(ang_diff.shape[0]):\n",
-    "        time = files[0][\"xrds\"][\"time\"].values[t]\n",
-    "        u = files[0][\"xrds\"][\"u\"].values[t]\n",
-    "        v = files[0][\"xrds\"][\"v\"].values[t]\n",
-    "        t_other = np.where(files[1][\"xrds\"][\"time\"].values == time)[0]\n",
+    "        time = files[0][\"ds\"][\"time\"].values[t]\n",
+    "        u = files[0][\"ds\"][\"u\"].values[t]\n",
+    "        v = files[0][\"ds\"][\"v\"].values[t]\n",
+    "        t_other = np.where(files[1][\"ds\"][\"time\"].values == time)[0]\n",
     "        if t_other.size == 0:\n",
     "            print(f\"time {time} missing\")\n",
     "            continue\n",
     "        else:\n",
     "            t_other = t_other[0]\n",
-    "        u_other = files[1][\"xrds\"][\"u\"].values[t_other]\n",
-    "        v_other = files[1][\"xrds\"][\"v\"].values[t_other]\n",
+    "        u_other = files[1][\"ds\"][\"u\"].values[t_other]\n",
+    "        v_other = files[1][\"ds\"][\"v\"].values[t_other]\n",
     "        mag = np.sqrt(u * u + v * v)\n",
     "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
     "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lon, lat = np.meshgrid(files[0][\"xrds\"][\"lon\"].values, files[0][\"xrds\"][\"lat\"].values)\n",
+    "lon, lat = np.meshgrid(files[0][\"ds\"][\"lon\"].values, files[0][\"ds\"][\"lat\"].values)\n",
     "first_time = np.datetime64(files[0][\"timerng\"][0], \"M\")\n",
     "deg_diff_dir = utils.get_dir(utils.PICUTRE_DIR / \"fs_comp_angle\")\n",
     "\n",
