--- a/gapfill_example.ipynb
+++ b/gapfill_example.ipynb
@@ -36,8 +36,9 @@
     }
    ],
    "source": [
+    "from pyplume.dataloaders import SurfaceGrid\n",
+    "from pyplume.thredds_data import SRC_THREDDS_HFRNET_UCSD\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import SurfaceGrid, read_netcdf_info\n",
     "from pyplume.simulation import ParcelsSimulation\n",
     "from pyplume.gapfilling import Gapfiller\n",
     "\n",
@@ -66,7 +67,7 @@
     "# load tijuana river plume tracker config\n",
     "cfg = utils.load_config(utils.PARCELS_CONFIGS_DIR / \"plume_track.json\")\n",
     "ocean_cfg = utils.get_path_cfg(cfg[\"netcdf_data\"][\"ocean\"])\n",
-    "ds = read_netcdf_info(ocean_cfg)"
+    "ds = load_data(datasource=SRC_THREDDS_HFRNET_UCSD, **ocean_cfg)"
    ]
   },
   {
@@ -233,9 +234,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
-  },
   "kernelspec": {
    "display_name": "Python 3.7.10 ('py3-parcels')",
    "language": "python",
@@ -253,7 +251,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "92c0155ff973c51285fb1dc8e256afac5e3dbdefb05174b825f6699ebdf3a9c7"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
