--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -65,7 +65,7 @@
     "import numpy as np\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid\n",
     "from pyplume.constants import *\n",
     "from pyplume.gapfilling import InterpolationStep, SmoothnStep, Gapfiller"
    ]
@@ -137,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "target_interped_xrds = gapfiller.execute(target)"
+    "target_interped_ds = gapfiller.execute(target)"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "save_path = str(target.path).split(\".nc\")[0] + \"_interped.nc\"\n",
-    "target_interped_xrds.to_netcdf(save_path)\n",
+    "target_interped_ds.to_netcdf(save_path)\n",
     "print(f\"saved to {save_path}\")"
    ]
   },
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
+    "fs_interp = dataset_to_fieldset(target_interped_ds)\n",
     "target.fieldset.U.show()  # uninterpolated\n",
     "fs_interp.U.show()  # interpolated, gapfilled, smoothed\n",
     "fs_interp.V.show()  # interpolated, gapfilled, smoothed"
