--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -17,7 +17,7 @@
     "from shapely.ops import nearest_points\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid\n",
     "from pyplume.thredds_data import rename_dataset_vars"
    ]
   },
@@ -306,7 +306,7 @@
    "source": [
     "from parcels import Field, VectorField\n",
     "from parcels.tools.converters import GeographicPolar, Geographic\n",
-    "from pyplume.parcels_utils import xr_dataset_to_fieldset\n",
+    "from pyplume.dataloaders import dataset_to_fieldset\n",
     "\n",
     "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
     "fu.units = GeographicPolar()\n",
