--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -32,7 +32,7 @@
     "import xarray as xr\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import xr_dataset_to_fieldset"
+    "from pyplume.dataloaders import dataset_to_fieldset"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "# display fieldset to see if data was loaded correctly\n",
-    "fs = xr_dataset_to_fieldset(ds_total)\n",
+    "fs = dataset_to_fieldset(ds_total)\n",
     "fs.U.show()"
    ]
   },
