--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -49,11 +49,11 @@
     "configs = [\n",
     "    \"plume_track.json\",\n",
     "    \"plume_track_alongshore.json\",\n",
-    "    # \"plume_track_live.json\",\n",
+    "    \"plume_track_live.json\",\n",
     "    \"mwb.json\",\n",
     "    # \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "#     \"hunington_all.json\",\n",
+    "    \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
     "]"
    ]
