--- a/plume_mat_particle_loader.ipynb
+++ b/plume_mat_particle_loader.ipynb
@@ -35,7 +35,7 @@
     "import xarray as xr\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.parcels_utils import arrays_to_particlefilenc"
+    "from pyplume.dataloaders import arrays_to_particlefilenc"
    ]
   },
   {
