--- a/run_mwbGS.ipynb
+++ b/run_mwbGS.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from pyplume.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid, read_netcdf_info\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, read_netcdf_info\n",
     "from pyplume.constants import *\n",
     "\n",
     "from pyplume.simulation import ParcelsSimulation\n",
@@ -123,7 +123,7 @@
     "\n",
     "grids = []\n",
     "for cfg in loaded_configs:\n",
-    "    ds = read_netcdf_info(cfg[\"netcdf_data\"][\"ocean\"])\n",
+    "    ds = read_netcdf_info(**utils.get_path_cfg(cfg[\"netcdf_data\"][\"ocean\"]))\n",
     "    grids.append(SurfaceGrid(ds))\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
