Fix up remaining issues from the refactor

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -16,8 +16,9 @@
     "from shapely.geometry import LineString, Point, box\n",
     "from shapely.ops import nearest_points\n",
     "\n",
+    "from pyplume.constants import DATA_DIR, FIELD_NETCDF_DIR\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, open_dataset\n",
     "from pyplume.thredds_data import rename_dataset_vars"
    ]
   },
@@ -28,12 +29,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
-    "# coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
-    "# output_file = \"data/field_netcdfs/socal_alongshore.nc\"\n",
-    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"tj_plume_1km_2020-03.nc\"\n",
-    "coastline_mat = utils.MATLAB_DIR / \"coastline.mat\"\n",
-    "output_file = \"data/field_netcdfs/tijuana_alongshore.nc\"\n",
+    "velocity_field_nc = FIELD_NETCDF_DIR / \"hunington_latest.nc\"\n",
+    "coastline_mat = DATA_DIR / \"socal_boundary.mat\"\n",
+    "output_file = \"data/field_netcdfs/socal_alongshore.nc\"\n",
+    "# velocity_field_nc = FIELD_NETCDF_DIR / \"tj_plume_1km_2020-03.nc\"\n",
+    "# coastline_mat = DATA_DIR / \"coastline.mat\"\n",
+    "# output_file = \"data/field_netcdfs/tijuana_alongshore.nc\"\n",
     "# 1 km resolution values\n",
     "lat_diff = 0.00898933\n",
     "lon_diff = 0.01042175"
@@ -46,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vel_ds = rename_dataset_vars(xr.open_dataset(velocity_field_nc))\n",
+    "vel_ds = rename_dataset_vars(open_dataset(velocity_field_nc))\n",
     "lats, lons = utils.load_pts_mat(coastline_mat)\n",
     "coastline = LineString(np.array([lats, lons]).T)"
    ]
@@ -327,11 +328,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
-  },
   "kernelspec": {
-   "display_name": "py3-parcels",
+   "display_name": "Python 3.7.10 ('py3-parcels')",
    "language": "python",
    "name": "python3"
   },
@@ -346,6 +344,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92c0155ff973c51285fb1dc8e256afac5e3dbdefb05174b825f6699ebdf3a9c7"
+   }
   }
  },
  "nbformat": 4,
