Refactor plot_features to load more generally, use logging instead of print

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -3,6 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "681d0967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "83565b02",
    "metadata": {},
    "outputs": [],
