--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -117,9 +117,7 @@
     "\n",
     "gif generation requires [magick](https://imagemagick.org/index.php)\n",
     "\n",
-    "if it doesn't work just comment out the gif generation line\n",
-    "\n",
-    "the gifs will be saved `snapshots/`"
+    "if it doesn't work just comment out the gif generation line"
    ]
   },
   {
