Make running from py file work, more refactor fixes

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "from pyplume.constants import CONFIGS_DIR\n",
     "import pyplume.utils as utils\n",
-    "import pyplume.runner as runner"
+    "from pyplume.config_parser import prep_sim_from_cfg, process_results"
    ]
   },
   {
@@ -69,7 +69,7 @@
     "loaded_configs = [utils.load_config(CONFIGS_DIR / path) for path in configs]\n",
     "sims = []\n",
     "for cfg in loaded_configs:\n",
-    "    sims.append(runner.prep_sim_from_cfg(cfg))"
+    "    sims.append(prep_sim_from_cfg(cfg))"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "for cfg, sim in zip(loaded_configs, sims):\n",
-    "    runner.process_results(sim, cfg)"
+    "    process_results(sim, cfg)"
    ]
   }
  ],
